testcases/negative/insert-shape-missing-type.otk
OFFICETALK/1.0
DOCTYPE powerpoint

AT slide[1]
INSERT SHAPE width=200pt height=100pt
